refactor to openAPI done
