# src/main/java/com/vnguy/crud_demo/controller/PatientController.java
@@ -1,46 +1,0 @@
-package com.vnguy.crud_demo.controller;
-
-import com.vnguy.crud_demo.dto.PatientDto;
-import com.vnguy.crud_demo.service.PatientService;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-
-@RestController
-@RequestMapping("/")
-public class PatientController {
-
-    private final PatientService patientService;
-
-    public PatientController(PatientService patientService) {
-        this.patientService = patientService;
-    }
-
-    @GetMapping
-    public ResponseEntity<List<PatientDto>> getAllPatients() {
-        return ResponseEntity.ok(patientService.getPatients());
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<PatientDto> getPatientById(@PathVariable Long id) {
-        return ResponseEntity.ok(patientService.getPatientById(id));
-    }
-
-    @PostMapping
-    public ResponseEntity<PatientDto> createPatient(@RequestBody PatientDto patientDto) {
-        return ResponseEntity.status(HttpStatus.CREATED).body(patientService.createPatient(patientDto));
-    }
-
-    @PutMapping("/{id}")
-    public ResponseEntity<PatientDto> updatePatient(@PathVariable Long id, @RequestBody PatientDto patientDto) {
-        return ResponseEntity.ok(patientService.updatePatient(id, patientDto));
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deletePatient(@PathVariable Long id) {
-        patientService.deletePatient(id);
-        return ResponseEntity.noContent().build();
-    }
-}
